--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - imagens/
+   - imagens/bg.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
